change link oh pictures

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             <nav class="header__nav">
                 <div class="header__wrapper">
                     <div class="header__logo">
-                        <img src="icons/glopt.png" alt="logo112">
+                        <img src="./icons/glopt.png" alt="logo112">
                     </div>
                     <ul class="header__ul">
                         <li class="header__menu"><a href="#">Преимущества</a></li>
