--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,7 @@
         1) Скачать и подключить шрифты 
         2) задать элементам font-weight 
         3) сделать адаптацию для блока header
+        4) сделать header__line  резиновым 
         -->
     
     <script src="js/script.js"></script>
