add section consultation

--- a/src/index.html
+++ b/src/index.html
@@ -253,9 +253,9 @@
                             <button class="price__btn header__btn">Подробнее</button>
                         </div>
                         <ul class="price__list">
-                            <li>Перевозка негабаритных и крупнотоннажных грузов</li>
                             <li>Самостоятельно декларируем и проводим таможенную очистку с оптимизацией кодов и ставок</li>
                             <li>Осуществляем прямые поставки с заводов от двери до двери</li>
+                            <li>Перевозка негабаритных и крупнотоннажных грузов</li>
                             <li>Экспресс доставка 1-2 дня из Гуанчжоу в Москву от 25$/кг  </li>
                             <a href="#" class="price__back header__btn">Назад</a> 
                         </ul>
@@ -274,8 +274,8 @@
                             <button class="price__btn header__btn">Подробнее</button>
                         </div>
                         <ul class="price__list">
-                            <li>Перевозка негабаритных и крупнотоннажных грузов</li>
                             <li>Самостоятельно декларируем и проводим таможенную очистку с оптимизацией кодов и ставок</li>
+                            <li>Перевозка негабаритных и крупнотоннажных грузов</li>
                             <li>Осуществляем прямые поставки с заводов от двери до двери</li>
                             <li>Экспресс доставка 1-2 дня из Гуанчжоу в Москву от 25$/кг  </li>
                             <a href="#" class="price__back header__btn">Назад</a> 
@@ -297,9 +297,9 @@
                         </div>
                         <ul class="price__list">
                             <li>Перевозка негабаритных и крупнотоннажных грузов</li>
+                            <li>Экспресс доставка 1-2 дня из Гуанчжоу в Москву от 25$/кг  </li>
                             <li>Самостоятельно декларируем и проводим таможенную очистку с оптимизацией кодов и ставок</li>
                             <li>Осуществляем прямые поставки с заводов от двери до двери</li>
-                            <li>Экспресс доставка 1-2 дня из Гуанчжоу в Москву от 25$/кг  </li>
                             <a href="#" class="price__back header__btn">Назад</a> 
                         </ul>
                     </div>
@@ -317,15 +317,34 @@
                             <button class="price__btn header__btn">Подробнее</button>
                         </div>
                         <ul class="price__list">
-                            <li>Перевозка негабаритных и крупнотоннажных грузов</li>
-                            <li>Самостоятельно декларируем и проводим таможенную очистку с оптимизацией кодов и ставок</li>
                             <li>Осуществляем прямые поставки с заводов от двери до двери</li>
+                            <li>Самостоятельно декларируем и проводим таможенную очистку с оптимизацией кодов и ставок</li>
+                            <li>Перевозка негабаритных и крупнотоннажных грузов</li>
                             <li>Экспресс доставка 1-2 дня из Гуанчжоу в Москву от 25$/кг  </li>
                             <a href="#" class="price__back header__btn">Назад</a> 
                         </ul>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="consultation">
+        <div class="container">
+            <h2 class="consultation__title">Заказать бесплатную консультацию</h2>
+            <form action="#" class="consultation__form">
+                <div class="consultation__icon">
+                    <div class="consultation__icon-wrapper">
+                        <img src="./icons/consultation/icon1.png" alt="icon">
+                    </div>
+                </div>
+                <input name="name" required placeholder="Ваше имя..." type="text">
+                <input name="phone" required placeholder="Ваш телефон..." type="number">
+                <input name="email" required placeholder="Ваш E-mail..." type="text">
+                <div class="consultation__wrapper-btn">
+                    <button class="consultation__btn header__btn">Отправить заявку</button>
+                </div>
+            </form>
         </div>
     </section>
         <!--
