add section manager

--- a/src/index.html
+++ b/src/index.html
@@ -347,10 +347,20 @@
             </form>
         </div>
     </section>
+
+    <section class="manager">
+        <div class="container">
+            <div class="manager__img">
+                <img src="./icons/manager/icon1.png" alt="manager_icon">
+            </div>
+            <h2 class="manager__title">Менеджеры компании</h2>
+            <p class="manager__subtitle">Подберут для Вас оптимальную схему грузоперевозки. Проведут контроль закупок, организуют прямые поставки от завода-изготовителя.</p>
+        </div>
+    </section>
         <!--
         1) Скачать и подключить шрифты 
         2) задать элементам font-weight 
-        3) сделать адаптацию для блока header
+        3) сделать адаптацию
         4) сделать header__line  резиновым 
         -->
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
