add section scheme

--- a/src/index.html
+++ b/src/index.html
@@ -357,6 +357,79 @@
             <p class="manager__subtitle">Подберут для Вас оптимальную схему грузоперевозки. Проведут контроль закупок, организуют прямые поставки от завода-изготовителя.</p>
         </div>
     </section>
+
+    <section class="scheme">
+        <div class="container">
+            <h2 class="scheme__title benefist__big-title">Схема работы с нами</h2>
+            <div class="scheme__wrapper">
+                <!--1-->
+                <div class="scheme__item">
+                    <div class="scheme__item-img">
+                        <img src="./icons/benefist_icons/benefist_1.png" alt="icon">
+                    </div>
+                    <div class="scheme__item-title">Заявка</div>
+                    <div class="scheme__item-subtitle">Вы оставляете заявку на нашем сайте или звоните нам</div>
+                </div>
+                <!--1-->
+                <!--1-->
+                <div class="scheme__item">
+                    <div class="scheme__item-img">
+                        <img src="./icons/benefist_icons/benefist_2.png" alt="icon">
+                    </div>
+                    <div class="scheme__item-title">Аналитика доставки</div>
+                    <div class="scheme__item-subtitle">Мы просчитываем варианты доставки Вашего груза</div>
+                </div>
+                <!--1-->
+                <!--1-->
+                <div class="scheme__item">
+                    <div class="scheme__item-img">
+                        <img src="./icons/benefist_icons/benefist_3.png" alt="icon">
+                    </div>
+                    <div class="scheme__item-title">Договор</div>
+                    <div class="scheme__item-subtitle">Заключаем с Вами договор о поставке груза из Китая</div>
+                </div>
+                <!--1-->
+                <!--1-->
+                <div class="scheme__item">
+                    <div class="scheme__item-img">
+                        <img src="./icons/benefist_icons/benefist_4.png" alt="icon">
+                    </div>
+                    <div class="scheme__item-title">Доставка на наш склад</div>
+                    <div class="scheme__item-subtitle">Связываемся с Вашим поставщиком в Китае и договариваемся о доставке груза на наш склад </div>
+                </div>
+                <!--1-->
+                <!--1-->
+                <div class="scheme__item">
+                    <div class="scheme__item-img">
+                        <img src="./icons/benefist_icons/benefist_5.png" alt="icon">
+                    </div>
+                    <div class="scheme__item-title">Проверка груза</div>
+                    <div class="scheme__item-subtitle">Мы проверяем, собираем и упаковываем перед отправкой Ваш груз на своём складе</div>
+                </div>
+                <!--1-->
+                <!--1-->
+                <div class="scheme__item">
+                    <div class="scheme__item-img">
+                        <img src="./icons/benefist_icons/benefist_6.png" alt="icon">
+                    </div>
+                    <div class="scheme__item-title">Доставка груза</div>
+                    <div class="scheme__item-subtitle">Мы перевозим ваш груз до места назначения и производим таможенную очистку</div>
+                </div>
+                <!--1-->
+                <!--1-->
+                <div class="scheme__item">
+                    <div class="scheme__item-img">
+                        <img src="./icons/benefist_icons/benefist_7.png" alt="icon">
+                    </div>
+                    <div class="scheme__item-title">Оплата</div>
+                    <div class="scheme__item-subtitle">Оплачиваете доставку груза при получении </div>
+                </div>
+                <!--1-->
+            </div>
+        </div>
+    </section>
+
+    
         <!--
         1) Скачать и подключить шрифты 
         2) задать элементам font-weight 
