--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
             <nav class="header__nav">
                 <div class="header__wrapper">
                     <div class="header__logo">
-                        <img src="./icons/glopt.png" alt="logo">
+                        <img src="icons/glopt.png" alt="logo">
                     </div>
                     <ul class="header__ul">
                         <li class="header__menu"><a href="#">Преимущества</a></li>
@@ -31,7 +31,7 @@
                         <span>Есть вопросы?</span>
                         <a href="tel:79264230100" class="header__tel">+7 (926) 423 01 00</a>
                     </div>
-                    <button class="header__btn">Перезвоните мне</button>
+                    <button data-modal="callback" class="header__btn">Перезвоните мне</button>
                 </div>
             </nav>
                 
@@ -457,6 +457,60 @@
             </div>
         </div> 
     </section>
+
+    <section class="question">
+        <div class="container">
+            <div class="question__wrapper">
+                <div class="question__text">
+                    <div class="question__title">Остались вопросы?</div>
+                    <div class="question__subtitle">Напишите нам!?</div>
+                </div>
+                <form class="question__form consultation__form" action="#">
+                    <input name="name" required placeholder="Ваше имя..." type="text">
+                    <input name="phone" required placeholder="Ваш телефон..." type="number">
+                    <input name="email" required placeholder="Ваш E-mail..." type="text">
+                    <input name="text" required placeholder="Сообщение..." type="text">
+                    <div class="question__wrapper-btn">
+                        <button class="question__btn header__btn">Отправить заявку</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <div class="footer">
+
+    </div>
+
+    <div class="overlay">
+        <!-- modal: callback-->
+        <div class="modal" id="callback">
+            <div id="closeCallBack" class="modal__close">&times;</div>
+            <form action="#" class="modal__form consultation__form">
+                <div class="modal__subtitle">Просто заполните форму заяви</div>
+                <div class="modal__descr"> и мы вам перезвоним</div>
+                <input name="name" required placeholder="Ваше имя..." type="text">
+                <input name="phone" required placeholder="Ваш телефон..." type="number">
+                <input name="email" required placeholder="Ваш E-mail..." type="text">
+                <button class="modal__btn header__btn">Отправить заявку</button>
+            </form>
+        </div>
+
+        <!-- modal: add form for "Получить расчет"
+        #
+        #
+        #
+        -->
+
+        <div class="modal" id="thanks">
+            <div class="modal__close">&times;</div>
+            <form action="#" class="modal__form consultation__form">
+                <div class="modal__subtitle">Спасибо за ваше заявку! </div>
+                <div class="modal__descr">наш менеджер свяжется в сами в ближайшее время!</div>
+            </form>
+        </div>
+
+    </div>
         <!--
         1) Скачать и подключить шрифты 
         2) задать элементам font-weight 
