remove  section carousel/slide

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
+    <link type="text/css" rel="stylesheet" href="css/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
     <link type="text/css" rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -431,31 +432,12 @@
     </section>
 
     <section class="carousel">
-        <div class="container">
+       
             <h2 class="carousel__title benefist__big-title">отзывы наших клиентов</h2>
             <span class="carousel__line work__line"></span>
             <p class="carousel__subtitle work__subtitle">Мы всегда стараемся помочь клиентам, что бы они обращались к нам снова</p>
-            <div class="carousel__inner">
-                <!--1 start-->
-                <div>
-                    <div class="carousel__inner-item">
-                        <img class="carousel__inner-img" src="img/workItemImg/1.png" alt="slide01">
-                        <h3 class="carousel__inner-title">Анисимова Ольга</h3>
-                        <p class="carousel__inner-subtitle">Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</p>
-                    </div>
-                </div>
-                <!--1 end -->
-                <!--1 start-->
-                <div>
-                    <div class="carousel__inner-item">
-                        <img class="carousel__inner-img" src="img/workItemImg/1.png" alt="slide01">
-                        <h3 class="carousel__inner-title">Ольга Анисимова</h3>
-                        <p class="carousel__inner-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, itaque sapiente natus similique autem maiores quam nihil tenetur obcaecati, facilis temporibus provident suscipit libero maxime sunt harum repellendus voluptas necessitatibus.</p>
-                    </div>
-                </div>
-                <!--1 end -->
-            </div>
-        </div> 
+    
+
     </section>
 
     <section class="question">
