add section map/ add footer

--- a/src/index.html
+++ b/src/index.html
@@ -437,7 +437,6 @@
             <span class="carousel__line work__line"></span>
             <p class="carousel__subtitle work__subtitle">Мы всегда стараемся помочь клиентам, что бы они обращались к нам снова</p>
             <div class="carousel__inner">
-                <!--1 start-->
                 <div>
                     <div class="carousel__inner-item">
                         <img class="carousel__inner-img" src="img/workItemImg/1.png" alt="slide01">
@@ -445,8 +444,6 @@
                         <p class="carousel__inner-subtitle">Хочу рассказать о компании Global Opt. Самое главное что меня радует, это быстрый поиск и анализ определенного товара. Доставляла через компанию уже много раз, от расходных материалов для отеля, ло дольших партий детской одежды. Буду продолжать пользтваьбся услугами даной компании</p>
                     </div>
                 </div>
-                <!--1 end -->
-                <!--1 start-->
                 <div>
                     <div class="carousel__inner-item">
                         <img class="carousel__inner-img" src="img/workItemImg/1.png" alt="slide01">
@@ -454,7 +451,6 @@
                         <p class="carousel__inner-subtitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque, itaque sapiente natus similique autem maiores quam nihil tenetur obcaecati, facilis temporibus provident suscipit libero maxime sunt harum repellendus voluptas necessitatibus.</p>
                     </div>
                 </div>
-                <!--1 end -->
             </div>
         </div>
     </section>
@@ -479,9 +475,29 @@
         </div>
     </section>
 
-    <div class="footer">
+    <sections class="map">
+        <div class="map__wrapper">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d49838.80251149661!2d30.70408099583041!3d46.43771705199278!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c632e48e1b4ad3%3A0xe27a955ccd8713c3!2z0JzRltC20L3QsNGA0L7QtNC90LjQuSDQkNC10YDQvtC_0L7RgNGCINCe0LTQtdGB0LAgKE9EUyk!5e0!3m2!1sru!2sua!4v1639493392859!5m2!1sru!2sua" width="100%" height="650" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+    </sections>
 
-    </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <div class="footer__logo header__logo">
+                    <img src="icons/glopt.png" alt="logo">
+                </div>
+                <div class="footer__text">
+                    <p>Global Opt - Доставка грузов из Китая в Россию и СНГ</p>
+                </div>
+                <div class="footer__contacts header__contacts">
+                    <span>Есть вопросы?</span>
+                    <a href="tel:79264230100" class="footer__tel header__tel">+7 (926) 423 01 00</a>
+                </div>
+                <button data-modal="callback" class="footer__btn header__btn">Перезвоните мне</button>
+            </div>
+        </div>
+    </footer>
 
     <div class="overlay">
         <!-- modal: callback-->
